# AgentGuard

./: .gitignore  Cargo.toml  README.md  evomap_creds.json  generate_bundle.py  generate_bundle2.py  package-lock.json  package.json  pnpm-lock.yaml  publish_payload.json  publish_payload2.json
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js
apps/desktop/src/: App.tsx  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: desktop_shell.rs  lib.rs  local_mcp_discovery.rs  main.rs  otlp_bridge.rs  repository_audit.rs  runtime_activity.rs  runtime_adapter_common.rs  runtime_adapters.rs  runtime_guard.rs  skill_library_sync.rs  skill_manager.rs
apps/desktop/src/components/: SeverityBadge.tsx  SkillCard.tsx
apps/desktop/src/mocks/: screenshotData.ts
apps/desktop/src/scanner-ui/: useScanner.ts
apps/desktop/src/shared/: appTypes.ts  icons.tsx  pathUtils.ts  settings.ts  shared.tsx  sharedUi.tsx  windowing.ts
docs/: activity-monitor-otlp.md
docs/examples/: claude-otlp-traces.json  codex-otlp-logs.json
scripts/: build-guard-sidecar.sh  build-macos-release.sh  claude_otlp_adapter.py  codex_guard_adapter.py  codex_otlp_adapter.py  configure_claude_otlp.py  configure_qwen_otlp.py  gemini_otlp_adapter.py  openclaw_otlp_adapter.py  opencode_otlp_adapter.py  qwen_otlp_adapter.py  runtime_otlp_common.py  send_otlp.py  setup-github-secrets.sh
(+13 files in other folders)
