[package]
name = "agentguard-desktop"
version = "0.1.3"
description = "Desktop skill scanner for AI agents"
authors = ["Agents-of-Shield"]
edition = "2021"

[lib]
name = "agents_of_shield_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
base64 = "0.22"
discovery-engine = { git = "https://github.com/AOS-HZ/agentguard-core.git", rev = "fce379c47619db4e40706f981217ad2a7ac30ce5" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rfd = "0.15.4"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tauri = { version = "2.2.5", features = ["image-png", "macos-private-api", "tray-icon"] }
tiny_http = "0.12"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
toml = "0.8"
urlencoding = "2.1.3"
walkdir = "2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-shell = "2.3.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
